[project]
name = "geant-sauce"
version = "0.1.0"
description = "Convert LENAGe simulation data to sauce compatible parquet file."
readme = "README.org"
requires-python = ">=3.9"
dependencies = [
    "awkward>=2.8.6",
    "numpy>=2.0.2",
    "polars>=1.32.0",
    "tqdm>=4.67.1",
    "uproot>=5.6.4",
]
