[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geant-sauce"
version = "0.1.0"
description = "Convert LENAGe simulation data to sauce compatible parquet file."
requires-python = ">=3.9"

dependencies = [
    "awkward>=2.8.6",
    "numpy",
    "polars>=1.32.0",
    "tqdm>=4.67.1",
    "uproot>=5.6.4",
]


[project.scripts]
geant-sauce = "geant_sauce.main:main"
